Add sensors and steering
